--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,19 @@
 <html lang="en">
 <head>
+
+  <!-- Run this ejs syntax part of the html only in production mode -->
+  <% if (htmlWebpackPlugin.options.trackJSToken) { %>
+
+    <script src="https://cdn.trackjs.com/agent/v3/latest/t.js"></script>
+    <script>
+      window.TrackJS && TrackJS.install({
+        token: '<%=htmlWebpackPlugin.options.trackJSToken%>'
+        // for more configuration options, see https://docs.trackjs.com
+      });
+    </script>
+
+  <% } %>
+
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +21,21 @@
 </head>
 <body>
   <h1> Hello World! </h1>
-  <script src="bundle.js"></script>
+  <h2> Users </h2>
+  <table>
+    <thead>
+      <th>&nbsp;</th>
+      <th> Id </th>
+      <th> First Name </th>
+      <th> Last Name </th>
+      <th> Email </th>
+    </thead>
+
+    <tbody id='users'>
+
+    </tbody>
+  </table>
+
+
 </body>
 </html>
